    In order to enable emulation of VMXx2 extensions configure with
        --enable-vmx=2 option (x86-64 must be enabled)
  - Bugfixes for CPU emulation correctness
  - Fixed Bochs crash when accessing the first byte above emulated memory size

- Internal Debugger
  - Introduced range read/write physical watchpoints
  - Allow reloading of segment registers from internal debugger

- BIOS
  - Fix MTRR configuration (prevented boot of modern Linux kernels)
  - Fix interrupt vectors for INT 60h-66h (reserved for user interrupt) by
    setting them to zero
  - Fix BIOS INT13 function 08 when the number of cylinders on the disk = 1

- I/O Devices
  - USB HP DeskJet 920C printer device emulation (Ben Lunt)

- Misc
  - Updated Bochs TESTFORM to version 0.5

- SF patches applied
 [2864402] outstanding x2apic patches by Stanislav
 [2960379] Fix build with -Wformat -Werror=format-security by Per Oyvind Karlsen
 [2938273] allow instrumentation to change execute by Konrad Grochowski
 [2926072] Indirection operators in expressions by Derek Peschel
 [2914433] makesym.perl misses symbols by John R. Jackson
 [2908481] USB Printer by Ben Lunt

- these S.F. bugs were closed/fixed
 [2956217] INT13 AH=8 returns wrong values when cylinders=1
 [2981161] Allow DMA transfers to continue when CPU is in HALT state
 [2795115] NX fault could be missed
 [2964824] bad newline sequence in aspi-win32.h
  [913419] configure options and build process needs some work
 [2938398] gdbstub compile error with x86_64 enabled
 [2734455] shutdown/reset type 05 should reinit the PICs
 [1921294] extended memory less than 1M wrong size
 [1947249] BX_USE_EBDA_TABLES and MP table placement
 [1933859] BX_USE_EBDA_TABLES and memory overlapping
 [2923680] "help dregs" is a syntax error
 [2919661] CPU may fail to do 16bit near call
 [2790768] Memory corruption with SMP > 32, Panic BIOS Keyboard Error
 [2902118] interrupts vectors 0x60 to 67 should be NULL !
 [2912502] Instruction Pointer behaving erratically